# Secure_key_generator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  STANDARDS.md  THREAT_MODEL.md
fuzz/: fuzz_drbg.cpp  fuzz_encoding.cpp  fuzz_sts.cpp
include/securekg/: selftest.h
include/securekg/crypto/: aes.h  hmac_sha256.h  kdf.h  sha256.h
include/securekg/drbg/: ctr_drbg.h  drbg.h  hash_drbg.h  hmac_drbg.h
include/securekg/entropy/: min_entropy.h  os_entropy.h
include/securekg/keygen/: csprng.h  key.h
include/securekg/stats/: sts.h
include/securekg/util/: bytes.h
secure_keygen/: entropy_collector.cpp  entropy_collector.h  entropy_test.cpp  entropy_test.h  keygen.cpp  keygen.h  main.cpp  randomness_test.cpp  randomness_test.h  secure_keygen  sha_mixer.cpp  sha_mixer.h
src/: selftest.cpp
src/crypto/: aes.cpp  hmac_sha256.cpp  kdf.cpp  sha256.cpp
src/drbg/: ctr_drbg.cpp  hash_drbg.cpp  hmac_drbg.cpp
src/entropy/: min_entropy.cpp  os_entropy.cpp
src/keygen/: csprng.cpp  key.cpp
src/stats/: special_functions.h  sts.cpp
src/util/: bytes.cpp
tests/: test_main.cpp
tools/: securekg_main.cpp
